--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -16,38 +16,138 @@
 
 <body>
 
-    <a class="prev posfleche" href="/etape4" data-link="/etape4">&#10094;</a>
+    <div class="cadretitre">
+        <div id="titreJeu">
 
-    <div id="titreJeu">
-        <h2> Bravo!!! vous etes <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en même temps
-        </h2>
-        <p> <span id="nameJoeur">
-                <br> </span> Tirez votre dé</p>
-        <span id="resultatTirage"></span>
+            <span> <a id="cadrefleche" href="/etape4" data-link="/etape4"> &#10094;</a></span>
+            <span>
+                <h2> Bravo!!! vous etes <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en
+                    même
+                    temps
+                </h2><br>
+                <p> <span id="nameJoeur">
+                    </span> <br> Tirez votre dé <span id="resultatTirage"></span></p>
+
+            </span>
+
         </div>
+        <div class="accordionbox">
+            <div>
+                <input id="tab-one" name="myaccordion" type="checkbox" />
+                <label for="tab-one">Voir les differentes Users stories en Cours</label>
+                <div class="insidebox">
+                    <div class="insideboxdetail">
+                        <p class="insideboxtext"> N°Userstorie</p>
+                        <p style="margin-left: 1% ;margin-right: 1%;">|</p>
+                        <p class="insideboxtext">taille:</p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtext"> Joueurs </p>
+                    </div>
+                    <div class="insideboxcadre">
+                        <p class="insideboxtext"> N°i: loreme Ipsum</p>
+                        <p style="margin-left: 1% ;margin-right: 1%;">|</p>
+                        <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span>
+                            <span>&#x2605;</span></p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtext"> <span> X</span><span> X</span></p>
+                    </div>
+                    <div class="insideboxcadre">
+                        <p class="insideboxtext"> N°2 loreme Ipsum</p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtext"> <span> X</span></p>
+                    </div>
+                    <div class="insideboxcadre">
+                        <p class="insideboxtext">N°3 loreme Ipsum</p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtext"> <span> X</span></p>
+                    </div>
+                    <div class="insideboxcadre">
+                        <p class="insideboxtext">N°4 loreme Ipsum</p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtext"> <span> X</span></p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
     <br><br><br>
     <section class="cadreCentrale">
         <section class="cadreGauche">
             <article class="cadrejeu">
                 <div id="chartdiv">
-
-
                 </div>
             </article>
-            <article></article>
+            <article>
+                <div id="rejetcartedayli" class="dashed">
+                    <div class="rebmaincontainer">
+                        <div class="thecard" id="carterebu">
+
+                        </div>
+                    </div>
+                </div>
+               
+            </article>
         </section>
         <section class="cadreDroite">
-            <!-- <article class="userstorie">
-                <h3>Liste des userstories En cours</h3> <br>
-                <div>----------------------------------------------------</div>
-            </article> -->
+
             <article class="pistede dice" id="ref">
+
             </article>
-            <p id="bloc1"> <h2> DayliCard <span> validez votre lecture en cliquant sur la croix en bas de carte </span></h2>
+            <div style="font-size: 0.75em; margin-top: 2%;">
+                cliquez sur un des paquets puis sur la carte dans le cadre et enfin sur la petite croix une fois la
+                carte lue.
+            </div>
+            <article class="piste">
+                <p>
+                <div class="cadrecarte">
+                    <p> Dayli </p>
+                    <p class="formegeom color1" id="carteday"></p>
+                </div>
+                <div class="cadrecarte">
+                    <p> revue </p>
+                    <p class="formegeom color2" id="carterev"></p>
+                </div>
+                <div class="cadrecarte">
+                    <p> Probleme </p>
+                    <p class="formegeom color3" id="cartepb"></p>
+                </div>
+                </p>
+            </article>
+            <article class="pistecard">
+
+
+                <div class="maincontainer">
+                    <div class="thecard" id="carte">
+                        <!-- <div class="front"></div>
+                        <div class="back">
+                            <h3> Titre1</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim rem expedita, officia,
+                                eum corporis suscipit nemo optio iure nam voluptate, quisquam accusamus nesciunt
+                                amet illum veniam assumenda eos possimus laborum!</p>
+                            <p class="croix1" id="interet"> + </p>
+                        </div> -->
+                    </div>
+                </div>
+
+            </article>
+            <!-- <div>
+                <h3 class="titre"> DayliCard
+                    <br> <span> validez votre lecture en cliquant sur la croix en bas de carte </span>
+                </h3>
+               
+                <h3 class="titre"> RevueCard <br> <span> validez votre lecture en cliquant sur la croix en bas de carte
+                    </span></h3>
                 <article class="pistecard">
                     <div class="maincontainer">
-                        <div class="thecard" id="carte">
-                            <div class="front"></div>
+                        <div class="thecard" id="carte2">
+                            <div class="thefront"></div>
                             <div class="back">
                                 <h3> Titre1</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim rem expedita, officia,
@@ -57,11 +157,8 @@
                             </div>
                         </div>
                     </div>
-
                 </article>
-                <h2> RevueCard <span>validez votre lecture en cliquant sur la croix en bas de carte</span></h2>
-                <article class="pistecard"></article>
-            </p>
+            </div> -->
         </section>
 
     </section>
