mise en forme des icones plus rectification du flip des cartes

--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -92,6 +92,11 @@
                         </div>
                     </div>
                 </div>
+                <p>
+                    <div class="pion">
+
+                    </div>
+                </p>
                
             </article>
         </section>
