--- a/Jeu/public/assets/css/jeu.css
+++ b/Jeu/public/assets/css/jeu.css
@@ -85,6 +85,7 @@ h3 {
   flex-direction: row;
   margin-left: 10%;
 }
+
 /* formes geometriques */
 .cercles {
   width: 1.5em;
@@ -94,13 +95,15 @@ h3 {
   margin-right: 2%;
   margin-top: 1%;
 }
+
 .croix1 {
   margin-left: 90%;
   margin-top: 2%;
   color: black;
   font-size: 2em;
- 
+
 }
+
 .formegeom {
   height: 5em;
   width: 2.5em;
@@ -109,16 +112,18 @@ h3 {
   border-radius: 5px;
   border: 1px solid white
 }
-/* ///////////////////////////////////////////////////////////////////////////////////:: */
+
+/* /////////////////////////////////////////////////////////////////////////////////// */
 
 article {
-  height: 20vw;
+  height: 30vw;
   margin-top: 0%;
   border-radius: none;
 }
-.dashed{
+
+.dashed {
   width: 33%;
-  height: 75%;
+  height: 80%;
   background: none;
   margin: 5%;
   border: dashed 5px black;
@@ -128,6 +133,32 @@ article {
 
 .cadreDroite>div {
   margin-top: 0%;
+}
+
+/* creation des pions */
+.pion {
+  /* transform: scale(0.66);
+  border: solid 10px black;
+  width:100%;
+  height:100%;
+  background-color: red;
+  background-position: 50%,50%;
+  background-image: url("../img/Scrumble_plateau.png");
+  background-size: 60%;
+  background-repeat: no-repeat;
+  clip-path: polygon(19% 0, 0% 20%, 13% 51%, 0% 80%, 20% 100%, 51% 89%, 80% 100%, 100% 80%, 84% 50%, 100% 20%, 80% 0%, 50% 14%); */
+
+  width: 10em;
+  height: 10em;
+  background-color: red;
+  border: 1px solid black;
+  border-radius: 50%;
+  background-image: url("../img/torii-gate.png");
+  background-size: 50%;
+  background-position: 50%, 50%;
+  background-repeat: no-repeat;
+  box-shadow: black;
+
 }
 
 /* creation des cartes */
@@ -149,11 +180,7 @@ article {
   margin-right: 10%;
 }
 
-/* .piste>p>div {
-  margin-right: 10%;
-  border: solid 1px black;
 
-} */
 .color1 {
   background: blue;
 }
@@ -177,6 +204,7 @@ article {
   margin-left: -2%;
 
 }
+
 .rebmaincontainer {
   position: relative;
   width: 100%;
@@ -231,11 +259,14 @@ article {
   color: white;
   border-radius: 10px;
 }
-.interpretation{
-  width:100%;
-  height:5%;
-  margin-top: 5%;margin-bottom: 5%;
+
+.interpretation {
+  width: 100%;
+  height: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
+
 .back {
   position: absolute;
   /* border: 1px solid white; */
