--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -22,11 +22,12 @@
             <span> <a id="cadrefleche" href="/etape4" data-link="/etape4"> &#10094;</a></span>
             <span>
                 <h2> Bravo!!! vous etes <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en
-                    même
-                    temps
+                    même temps
                 </h2><br>
-                <p> <span id="nameJoeur">
-                    </span> <br> Tirez votre dé <span id="resultatTirage"></span></p>
+                <p> <span id="nameJoeur"></span>
+                    <br> Tirez votre dé
+                    <span id="resultatTirage"></span>
+                </p>
 
             </span>
 
@@ -35,7 +36,11 @@
             <div>
                 <input id="tab-one" name="myaccordion" type="checkbox" />
                 <label for="tab-one">Voir les differentes Users stories en Cours</label>
+
                 <div class="insidebox">
+                    <div id="listJoueur" > 
+
+                    </div>
                     <div class="insideboxdetail">
                         <p class="insideboxtext"> N°Userstorie</p>
                         <p style="margin-left: 1% ;margin-right: 1%;">|</p>
@@ -45,32 +50,32 @@
                     </div>
                     <div class="insideboxcadre">
                         <p class="insideboxtext"> N°i: loreme Ipsum</p>
-                        <p style="margin-left: 1% ;margin-right: 1%;">|</p>
+                        <p style="margin-left: 1%; margin-right: 1%;">|</p>
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span>
                             <span>&#x2605;</span></p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                        <p class="insideboxtext"> <span> X</span><span> X</span></p>
+                         <p class="cadrebox"> <span> X</span><span> X</span></p>
                     </div>
                     <div class="insideboxcadre">
                         <p class="insideboxtext"> N°2 loreme Ipsum</p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                        <p class="insideboxtext"> <span> X</span></p>
+                        <p class="cadrebox"> <span> X</span></p>
                     </div>
                     <div class="insideboxcadre">
                         <p class="insideboxtext">N°3 loreme Ipsum</p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                        <p class="insideboxtext"> <span> X</span></p>
+                         <p class="cadrebox"> <span> X</span></p>
                     </div>
                     <div class="insideboxcadre">
                         <p class="insideboxtext">N°4 loreme Ipsum</p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                        <p class="insideboxtext"> <span> X</span></p>
+                       <p class="cadrebox">  <span> X</span></p>
                     </div>
 
                 </div>
@@ -87,17 +92,17 @@
             <article>
                 <div id="rejetcartedayli" class="dashed">
                     <div class="rebmaincontainer">
-                        <div class="thecard" id="carterebu">
+                        <div class="thecarde" id="carterebu">
 
                         </div>
                     </div>
                 </div>
-                <p>
-                    <div class="pion">
+                <p >
+                     <div id="backapion">
 
-                    </div>
+                    </div> 
                 </p>
-               
+
             </article>
         </section>
         <section class="cadreDroite">
@@ -125,19 +130,12 @@
                 </div>
                 </p>
             </article>
-            <article class="pistecard">
+            <article class="pistecard" id="pistegrcarte">
 
 
                 <div class="maincontainer">
                     <div class="thecard" id="carte">
-                        <!-- <div class="front"></div>
-                        <div class="back">
-                            <h3> Titre1</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim rem expedita, officia,
-                                eum corporis suscipit nemo optio iure nam voluptate, quisquam accusamus nesciunt
-                                amet illum veniam assumenda eos possimus laborum!</p>
-                            <p class="croix1" id="interet"> + </p>
-                        </div> -->
+
                     </div>
                 </div>
 
@@ -167,7 +165,41 @@
         </section>
 
     </section>
+    <!-- //  const zonejoueur= document.querySelectorAll('.insideboxtext');
+    //  const itemGame=document.querySelectorAll('itemGame');
+    //  console.log(zonejoueur,itemGame);
+    //  let draggedItem = null;
+    //  for (let i = 0; i < itemGame.length; i++) { // boucle sur chaque list d'items 
+    //     const item = itemGame[i];
+    //     item.addEventListener('dragstart', function (e) { // sur chaque carte on effectue un evement d'activation du déplacement
+    //         console.log('dragstart', e);
+    //         draggedItem = item; // 1 elt deplacé = un item
+    //         setTimeout(function () {
+    //             item.style.display = "none"; // chaque item n'a pas de style display particulier
+    //         }, 0)
 
+    //     })
+    //     item.addEventListener('dragend', function () { // sur chaque carte on effectue un evement de fin du déplacement
+    //       console.log('dragend');
+    //       setTimeout(function (e) {
+    //           draggedItem.style.display = "block"; // chaque item déplacé a style display particulier block
+    //           draggedItem = null;
+    //       }, 0)
+    //   })
+    //   for (let j = 0; j < zonejoueur.length; j++) { // chaque item déplacé a style display particulier block
+    //     const listZoneJ = zonejoueur[j];
+    //     listZoneJ.addEventListener('dragover', function (e) {
+    //         e.preventDefault();
+    //     });
+    //     listZoneJ.addEventListener('dragenter', function (e) {
+    //         e.preventDefault();
+    //     });
+    //     listZoneJ.addEventListener('drop', function () {
+    //         this.append(draggedItem);
+    //     });
+
+    // }
+    //  } -->
 
 </body>
 
