systeme avec les cartes+rond accordeon

--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -54,28 +54,28 @@
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span>
                             <span>&#x2605;</span></p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                         <p class="cadrebox"> <span> X</span><span> X</span></p>
+                         <p class="cadrebox"> </p>
                     </div>
                     <div class="insideboxcadre">
                         <p class="insideboxtext"> N°2 loreme Ipsum</p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                        <p class="cadrebox"> <span> X</span></p>
+                        <p class="cadrebox"> </p>
                     </div>
                     <div class="insideboxcadre">
                         <p class="insideboxtext">N°3 loreme Ipsum</p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                         <p class="cadrebox"> <span> X</span></p>
+                         <p class="cadrebox"> </p>
                     </div>
                     <div class="insideboxcadre">
                         <p class="insideboxtext">N°4 loreme Ipsum</p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
-                       <p class="cadrebox">  <span> X</span></p>
+                       <p class="cadrebox">  </p>
                     </div>
 
                 </div>
