--- a/Jeu/public/assets/css/jeu.css
+++ b/Jeu/public/assets/css/jeu.css
@@ -8,18 +8,348 @@ h3 {
   margin-top: 2%;
   margin-left: 2%;
   width: 100%;
+}
+/* volet coulissant */
+#toogle{display: none; }
+label[for=toogle]{
+  position: absolute;
+  background: #666;
+  width: 150px;
+  height: 50px;
+  right: -100px;
+  top: 50px;
+  line-height: 50px;
+  text-align: center;
+  z-index:3;
+  transform: rotate(270deg);
+  border-radius: 0 0 10px 10px;
+}
+/* .reponglet{
+  display: flex;
+  flex-direction: column;
+} */
+#volet{
+  position: fixed;
+  top: 150px;
+  left: 0;
+  height:78.5%;
+  width: 53%;
+  background-color: #313439;
+  -webkit-transition: all .5s ease-in;
+  transition: all .5s ease-in;
+  z-index:3;
+}
+/* #volet ul li {
+  display: flex;
+  flex-direction: column;
+} */
+#volet ul li{
+  padding-left: 10px;
+}
+#volet ul li:hover{
+  background: transparent;
+  padding-left: 10px;
+  -webkit-transition: all .5s ease-in;
+  transition: all .3s ease;
+}
+#toogle:checked ~ #volet{
+  left: -53%;
+}
+/* tchat */
+/*  formulaire d'entrée */
+.list{
+  color:"white";
+}
+.join-container {
+	max-width: 100%;
+  margin-left:2%;
+  margin-top:5%;
+  color: black;
+  background-color:#FDD75D ;
+  
+}
+.join-header {
+	text-align: center;
+	padding: 20px;
+	background: transparent;
+	border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+ 
+}
+
+.join-main {
+	padding: 30px 40px;
+  background: #63737F;
+ 
+}
+
+.join-main p {
+	margin-bottom: 20px;
+}
+
+.join-main .form-control {
+  margin-bottom: 20px;
+  background-color: 'red';
+}
+
+.join-main label {
+	display: block;
+  margin-bottom: -15%; 
+
+  color:white;
+  margin-left:-15px;
+}
+label{
+  color:'red';
+}
+
+.join-main select {
+	font-size: 16px;
+	padding: 1px;
+	height: 40px;
+	width: 100%;
+}
+/* tchat en lui-même */
+.chat-container {
+	width: 50em;
+	background: #fff;
+  margin-left: 2%;
+  margin-top:4%;
+  overflow: hidden;
+  border: solid 1px black;
 
 }
-#listJoueur{
-  border:solid 1px black;margin-top: 2%;background-color: #313439;display: flex; flex-direction: row;
+
+.chat-header {
+	background:#475158;
+	color: #fff;
+	padding: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
+
+.chat-main {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+}
+
+.chat-sidebar {
+	background: #475158;
+	color: #fff;
+	padding: 20px 20px 60px;
+  /* overflow-y: scroll; */
+	padding: 30px;
+  
+}
+
+.chat-sidebar h2 {
+	font-size: 20px;
+	background: rgba(0, 0, 0, 0.1);
+	padding: 10px;
+	margin-bottom: 20px;
+}
+
+.chat-sidebar h3 {
+	margin-bottom: 15px;
+}
+
+.chat-sidebar ul li {
+	padding: 10px 0;
+}
+
+.chat-messages {
+	padding: 30px;
+	height: 15em;
+  overflow-y: scroll;
+}
+
+.chat-messages .message {
+	padding: 10px;
+	margin-bottom: 15px;
+	background-color:#313439;
+	border-radius: 5px;
+  overflow-wrap: break-word;
+}
+
+.chat-messages .message .meta {
+	font-size: 15px;
+	font-weight: bold;
+	color:black;
+	opacity: 0.7;
+	margin-bottom: 7px;
+}
+
+.chat-messages .message .meta span {
+	color: #777;
+}
+
+.chat-form-container {
+	padding: 20px 30px;
+  background-color:  #475158;
+}
+
+.chat-form-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-form-container input[type='text'] {
+	font-size: 16px;
+	padding: 0px;
+	height: 40px;
+  width:100%;
+  margin-left:-10px;
+}
+.chat-form-container .btn {
+  margin-top: -10px;
+  margin-left: -5px;
+}
+/* modal */
+/* Remove margins and padding from the list */
+#myUL {
+  margin: 0;
+  padding: 0;
+}
+/* Style the list items */
+#myUL li {
+  cursor: pointer;
+  position: relative;
+  background: #eee;
+  font-size: 2em;
+  transition: 0.2s;
+  color:black;
+  margin-left: 5%;
+  display: flex;
+  flex-direction: row;
+}
+/* Darker background-color on hover */
+#myUL li:hover {
+  background: #ddd;
+}
+
+#salon{
+  background-color: white;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+.lienroom{
+  color:white;
+}
+label{ color: black; 
+margin-left: 20%;
+padding-top:-10%;}
+
+#validation {
+  background-color: rgb(77, 200, 52);
+  color: black;
+  margin-left: 20%;
+  padding: 25px 75px;
+  border-radius: 50px;
+}
+
+#myBtn {
+  margin-left:40%;
+  margin-top: 1% ;
+  margin-bottom: 1%;
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: white;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgb(77, 200, 52);
+  background-image: linear-gradient(to top left,
+                                    rgba(0, 0, 0, .2),
+                                    rgba(0, 0, 0, .2) 30%,
+                                    rgba(0, 0, 0, 0));
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+              inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+/* The Modal (background) */
+.modal {
+ 
+
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 2;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  border: solid white 5px;
+  background-color: black;
+  margin-top: 15%;
+  margin-left: 10%;
+  padding-top: 1%;
+  padding-bottom: 15%;
+  width: 80%;
+  height:33%;
+  /* Could be more or less, depending on screen size */
+}
+
+.modal-content p {
+  color: white;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  margin-top: -50px;
+  margin-right: 2%;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* ----------------------------------------------- */
+#listJoueur {
+  border: solid 1px black;
+  margin-top: 2%;
+  background-color: #313439;
+  display: flex;
+  flex-direction: row;
+}
+
 #titreJeu {
   /* border:5px solid black; */
   width: 55%;
   display: flex;
   flex-direction: row;
-  margin-left: 2%;
+  margin-left: 4%;
 
+}
+
+.explication {
+  font-size: 0.75em;
+  margin-top: 2%;
 }
 
 /* #titreJeu span {margin-left: 25%;} */
@@ -104,6 +434,7 @@ h3 {
   margin-top: 2%;
   color: black;
   font-size: 2em;
+  cursor: grab;
 }
 
 .formegeom {
@@ -139,33 +470,23 @@ article {
 
 /* creation des pions */
 .pion {
-  /* transform: scale(0.66);
-  border: solid 10px black;
-  width:100%;
-  height:100%;
-  background-color: red;
-  background-position: 50%,50%;
-  background-image: url("../img/Scrumble_plateau.png");
-  background-size: 60%;
-  background-repeat: no-repeat;
-  clip-path: polygon(19% 0, 0% 20%, 13% 51%, 0% 80%, 20% 100%, 51% 89%, 80% 100%, 100% 80%, 84% 50%, 100% 20%, 80% 0%, 50% 14%); */
 
   width: 10em;
   height: 10em;
   background-color: red;
   border: 1px solid black;
   border-radius: 50%;
-  /* background-image: url("../img/torii-gate.png"); */
   background-size: 50%;
   background-position: 50%, 50%;
   background-repeat: no-repeat;
   box-shadow: black;
 
 }
-#backapion{
+
+#backapion {
   width: 60%;
   flex-wrap: wrap;
-  
+
 }
 
 /* creation des cartes */
@@ -572,29 +893,29 @@ article {
   padding: 2%;
   margin-left: 10%;
 }
-.cadrebox{
-  width:25%;
+
+.cadrebox {
+  width: 25%;
   display: flex;
   flex-direction: row;
-  /* border:solid 1px red; */
   margin-left: 0%;
   margin-right: 0%;
 }
 
 /* STYLE THE ACCORDION HOLDING CONTAINER */
 .accordionbox {
-  max-width: 480px;
-  /* margin: 100px; */
-  margin-left: 10%;
+  max-width: 30em;
   padding: 2%;
-  z-index: 2;
+  z-index: 0;
+  width:100%;
 }
 
 /* STYLE THE CHECKBOX LABELS */
-
 .accordionbox label {
-  /* font-family: 'PT Sans Narrow', sans-serif; */
+  width:94%;
+  
   padding: 10px;
+  margin-left:0;
   position: relative;
   display: block;
   cursor: pointer;
@@ -604,18 +925,17 @@ article {
   border-bottom: 2px solid #313439;
   transition: all 0.3s ease;
 }
-
-
-
 /* HIDE THE HTML CHECKBOX SQUARE */
 .accordionbox input {
-  display: none;
+  display: none; 
+ 
 }
 
 /* STYLE THE INITIAL DROPDOWN CONTENT BOX */
 .insideboxcadre {
   width: 98%;
-  height: 9%;
+  
+  height: 7.5%;
   display: flex;
   flex-direction: row;
   background-color: #313439;
@@ -635,7 +955,7 @@ article {
   height: 0px;
   padding: 0px 15px;
   font-size: 1em;
-  /* font-family: 'PT Sans', sans-serif; */
+ 
   color: #111111;
   background: #ffffff;
   overflow: hidden;
@@ -645,8 +965,8 @@ article {
 
 /* STYLE THE CLICKED DROPDOWN CONTENT BOX */
 .accordionbox input:checked~.insidebox {
-  height: 250px;
-  /* overflow: scroll; */
+  height: 20em;
+  overflow-y: scroll;
 }
 
 
