--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -22,7 +22,7 @@
 
 <body>
     <button id="myBtn"> Session de jeu</button>
-    <div>
+    <!-- <div>
         <input type="checkbox" name="toogle" id="toogle" />
         <div id="volet">
 
@@ -36,12 +36,12 @@
                             <form action="" id="entretchat">
                                 <div class="form-control">
                                     <label for="username" class="list"> Nom des Joueurs</label>
-                                    <!-- <select name="room" id="username">
+                                    <select name="room" id="username">
                                         <option value="Joueur1">Joueur1</option>
                                         <option value="Joueur2">Joueur2</option>
                                         <option value="Joueur3">Joueurs3</option>
                                       
-                                    </select> -->
+                                    </select>
                                    <input
                                     type="text"
                                     name="username"
@@ -70,7 +70,7 @@
 
             <label for="toogle">Tchat</label>
         </div>
-    </div>
+    </div> -->
 
 
     <div id="myModal" class="modal">
@@ -166,6 +166,14 @@
                         <p class="insideboxtext">N°4 loreme Ipsum</p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="insideboxtext"> <span>&#x2605;</span> <span>&#x2605;</span></p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="cadrebox"> </p>
+                    </div>
+                    <hr>
+                    <div class="insideboxcadre">
+                        <p class="insideboxtext">Dette Technique</p>
+                        <p style="margin-left: 2% ;margin-right: 2%;">|</p>
+                        <p class="insideboxtextdette"> Dette Inexistante x3 </p>
                         <p style="margin-left: 2% ;margin-right: 2%;">|</p>
                         <p class="cadrebox"> </p>
                     </div>
