--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -93,13 +93,13 @@
                     <span id="link-to-share"></span></p>
                 </p>
             </div>
-            <div>
-                <p class="listsession" id="roomcard"> Liste des salons <br>
+            <div id="cadrechoix">
+                <!-- <p class="listsession" id="roomcard"> Liste des salons <br>
 
                 <ul id="myUL">
                     <li>Aucun salon n'est proposé</li>
                 </ul>
-                </p>
+                </p> -->
             </div>
             <span class="close">x</span>
         </div>
