--- a/Jeu/public/assets/css/jeu.css
+++ b/Jeu/public/assets/css/jeu.css
@@ -9,9 +9,13 @@ h3 {
   margin-left: 2%;
   width: 100%;
 }
+
 /* volet coulissant */
-#toogle{display: none; }
-label[for=toogle]{
+#toogle {
+  display: none;
+}
+
+label[for=toogle] {
   position: absolute;
   background: #666;
   width: 150px;
@@ -20,188 +24,197 @@ label[for=toogle]{
   top: 50px;
   line-height: 50px;
   text-align: center;
-  z-index:3;
+  z-index: 3;
   transform: rotate(270deg);
   border-radius: 0 0 10px 10px;
-  color:white;
-  
+  color: white;
+
 }
+
 /* .reponglet{
   display: flex;
   flex-direction: column;
 } */
-#volet{
+#volet {
   position: fixed;
   top: 160px;
   left: 0;
-  height:72.66%;
+  height: 72.66%;
   width: 90%;
   background-color: #313439;
   -webkit-transition: all .5s ease-in;
   transition: all .5s ease-in;
-  z-index:3;
+  z-index: 3;
 }
 
-#volet ul li{
+#volet ul li {
   padding-left: 10px;
 }
-#volet ul li:hover{
+
+#volet ul li:hover {
   background: transparent;
   padding-left: 10px;
   -webkit-transition: all .5s ease-in;
   transition: all .3s ease;
 }
 
-#toogle:checked ~ #volet{
+#toogle:checked~#volet {
   left: -90%;
 }
+
 /* tchat */
 /*  formulaire d'entrée */
-.list{
-  color:"white";
+.list {
+  color: "white";
 }
+
 .join-container {
-	max-width: 100%;
-  margin-left:2%;
-  margin-top:5%;
+  max-width: 100%;
+  margin-left: 2%;
+  margin-top: 5%;
   color: black;
-  background-color:#FDD75D ;
-  
+  background-color: #FDD75D;
+
 }
+
 .join-header {
-	text-align: center;
-	padding: 20px;
-	background: transparent;
-	border-top-left-radius: 5px;
+  text-align: center;
+  padding: 20px;
+  background: transparent;
+  border-top-left-radius: 5px;
   border-top-right-radius: 5px;
- 
+
 }
 
 .join-main {
-	padding: 30px 40px;
+  padding: 30px 40px;
   background: #63737F;
- 
+
 }
 
 .join-main p {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .join-main .form-control {
   margin-bottom: 20px;
-  
+
   display: flex;
   flex-direction: column;
 
 }
 
 .join-main label {
-	display: block;
-  margin-bottom: -5%; 
+  display: block;
+  margin-bottom: -5%;
 
-  color:white;
-  margin-left:-15px;
+  color: white;
+  margin-left: -15px;
 }
 
 
 .join-main select {
-	font-size: 16px;
-	padding: 1px;
-	height: 40px;
+  font-size: 16px;
+  padding: 1px;
+  height: 40px;
   width: 100%;
   margin-top: 5%;
 }
+
 /* tchat en lui-même */
 .chat-container {
-	width: 66em;
-	background: #fff;
+  width: 66em;
+  background: #fff;
   margin-left: 2%;
-  margin-top:1%;
+  margin-top: 1%;
   overflow: hidden;
   border: solid 1px black;
 }
 
 .chat-header {
-	background:#475158;
-	color: #fff;
-	padding: 10px;
-	display: flex;
-	align-items: center;
+  background: #475158;
+  color: #fff;
+  padding: 10px;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  
+
 }
 
 .chat-main {
-	display: grid;
-	grid-template-columns: 1fr 3fr;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
 }
 
 .chat-sidebar {
-	background: #475158;
-	color: #fff;
-	padding:0;
+  background: #475158;
+  color: #fff;
+  padding: 0;
   /* overflow-y: scroll; */
   padding: 0;
- ;
-  
+  ;
+
 }
 
 .chat-sidebar h2 {
-	font-size: 20px;
-	background: rgba(0, 0, 0, 0.1);
-	padding: 10px;
+  font-size: 20px;
+  background: rgba(0, 0, 0, 0.1);
+  padding: 10px;
   margin-bottom: 20px;
-  width:88%;
- 
+  width: 88%;
+
 }
 
 .chat-sidebar h3 {
-	margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .chat-sidebar ul li {
-	padding: 10px 0;
+  padding: 10px 0;
 }
-.infochat{
-  width:80%;
-  color:white;
+
+.infochat {
+  width: 80%;
+  color: white;
   font-size: 0.90em;
 }
+
 .chat-messages {
-	padding-left: 0;
+  padding-left: 0;
   height: 20em;
-  margin-left:0%;
+  margin-left: 0%;
   overflow-y: scroll;
- 
+
 }
 
 .chat-messages .message {
-  width:80%;
+  width: 80%;
   margin-top: 2%;
-	padding: 10px;
-	margin-bottom: 15px;
-	background-color:#63737F;
-	border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: #63737F;
+  border-radius: 5px;
   overflow-wrap: break-word;
-  
+
 }
 
 .chat-messages .message .meta {
-	font-size: 1.5em;
-	font-weight: bold;
+  font-size: 1.5em;
+  font-weight: bold;
   color: white;
-	opacity: 0.7;
+  opacity: 0.7;
   margin-bottom: 7px;
-  
+
 }
 
 .chat-messages .message .meta span {
-	color: white; }
+  color: white;
+}
 
 .chat-form-container {
-padding: 0 0 0 0;
-  background-color:  #475158;
- 
+  padding: 0 0 0 0;
+  background-color: #475158;
+
 }
 
 .chat-form-container form {
@@ -211,17 +224,19 @@ padding: 0 0 0 0;
 }
 
 .chat-form-container input[type='text'] {
-	font-size: 16px;
-	padding: 0px;
-	height: 40px;
-  width:100%;
-  margin-left:-10px;
+  font-size: 16px;
+  padding: 0px;
+  height: 40px;
+  width: 100%;
+  margin-left: -10px;
 }
+
 .chat-form-container .btn {
   margin-top: -10px;
   margin-left: -5px;
 }
-.quitBtn{ 
+
+.quitBtn {
   background-color: rgb(251, 173, 37);
   border-radius: 50px;
   color: white;
@@ -229,13 +244,42 @@ padding: 0 0 0 0;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 1em;}
+  font-size: 1em;
+}
+
 /* modal */
+
+/* form inside modal */
+#cadrechoix {
+  margin-left: 10%;
+ 
+}
+
+#cadrechoix label {
+  font: 1em;
+  color: white;
+  margin-left: -1%;
+}
+
+#cadrechoix input {
+  margin: .4em;
+}
+
+.formchoix{
+  display:flex;
+  flex-direction: column;
+  color: white;
+}
+.repchoix{
+  margin-left:25%;
+}
+
 /* Remove margins and padding from the list */
 #myUL {
   margin: 0;
   padding: 0;
 }
+
 /* Style the list items */
 #myUL li {
   cursor: pointer;
@@ -243,27 +287,32 @@ padding: 0 0 0 0;
   background: #eee;
   font-size: 2em;
   transition: 0.2s;
-  color:black;
+  color: black;
   margin-left: 5%;
   display: flex;
   flex-direction: row;
 }
+
 /* Darker background-color on hover */
 #myUL li:hover {
   background: #ddd;
 }
 
-#salon{
+#salon {
   background-color: white;
   padding-top: 2%;
   padding-bottom: 2%;
 }
-.lienroom{
-  color:white;
+
+.lienroom {
+  color: white;
 }
-label{ color: black; 
-margin-left: 20%;
-padding-top:-10%;}
+
+label {
+  color: black;
+  margin-left: 20%;
+  padding-top: -10%;
+}
 
 #validation {
   background-color: rgb(77, 200, 52);
@@ -274,8 +323,8 @@ padding-top:-10%;}
 }
 
 #myBtn {
-  margin-left:40%;
-  margin-top: 1% ;
+  margin-left: 40%;
+  margin-top: 1%;
   margin-bottom: 1%;
   border: 0;
   line-height: 2.5;
@@ -287,16 +336,16 @@ padding-top:-10%;}
   border-radius: 10px;
   background-color: rgb(77, 200, 52);
   background-image: linear-gradient(to top left,
-                                    rgba(0, 0, 0, .2),
-                                    rgba(0, 0, 0, .2) 30%,
-                                    rgba(0, 0, 0, 0));
+      rgba(0, 0, 0, .2),
+      rgba(0, 0, 0, .2) 30%,
+      rgba(0, 0, 0, 0));
   box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
-              inset -2px -2px 3px rgba(0, 0, 0, .6);
+    inset -2px -2px 3px rgba(0, 0, 0, .6);
 }
 
 /* The Modal (background) */
 .modal {
- 
+
 
   display: none;
   /* Hidden by default */
@@ -327,7 +376,7 @@ padding-top:-10%;}
   padding-top: 1%;
   padding-bottom: 15%;
   width: 80%;
-  height:33%;
+  height: 33%;
   /* Could be more or less, depending on screen size */
 }
 
@@ -932,15 +981,15 @@ article {
   max-width: 30em;
   padding: 2%;
   z-index: 0;
-  width:100%;
+  width: 100%;
 }
 
 /* STYLE THE CHECKBOX LABELS */
 .accordionbox label {
-  width:94%;
-  
+  width: 94%;
+
   padding: 10px;
-  margin-left:0;
+  margin-left: 0;
   position: relative;
   display: block;
   cursor: pointer;
@@ -950,16 +999,17 @@ article {
   border-bottom: 2px solid #313439;
   transition: all 0.3s ease;
 }
+
 /* HIDE THE HTML CHECKBOX SQUARE */
 .accordionbox input {
-  display: none; 
- 
+  display: none;
+
 }
 
 /* STYLE THE INITIAL DROPDOWN CONTENT BOX */
 .insideboxcadre {
   width: 98%;
-  
+
   height: 7.5%;
   display: flex;
   flex-direction: row;
@@ -971,7 +1021,8 @@ article {
   color: white;
 }
 
-.insideboxtext, .insideboxtextdette{
+.insideboxtext,
+.insideboxtextdette {
   font-size: 0.75em;
   display: flex;
   flex-direction: row;
